[package]
name = "gitjuggling"
version = "0.2.0"
edition = "2021"
authors = ["Vincent Rischmann <vincent@rischmann.fr>"]
description = "Run a git command in all repositories under the current working directory"
readme = "README.md"
homepage = "https://github.com/vrischmann/gitjuggling"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2"
walkdir = "2"
rayon = "1.5"
anyhow = "1.0"
colored = "2"
thiserror = "1.0.50"
