[package]
name = "gitjuggling"
version = "1.4.0"
edition = "2021"
authors = ["Vincent Rischmann <vincent@rischmann.fr>"]
description = "Run a git command in all repositories under the current working directory"
readme = "README.md"
repository = "https://github.com/vrischmann/gitjuggling"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5"
walkdir = "2"
rayon = "1.5"
anyhow = "1.0"
colored = "2"
onlyerror = "0.1.3"
